[package]
name = "vibegraph_rs"
version = "0.1.0"
edition = "2021"
default-run = "vibegraph"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 

serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.96"
tokio-postgres-migration = "0.1.0"
tokio-postgres = { version = "0.7.8" ,  features=["with-chrono-0_4"] } 
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }




dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.18"


ethers = "2.0.10"
thiserror = "1.0.49"
include_dir = "0.7.3"
inquire = "0.6.2"


 


# cargo run --bin migrate
[[bin]]
name = "migrate"
path = "src/db/postgres/scripts/migrate.rs"

[[bin]]
name = "rollback_full"
path = "src/db/postgres/scripts/rollback_full.rs"
 

[[bin]]
name = "vibegraph"
path = "src/main.rs"
